made changes to html docs

--- a/html-tutorial/samples.html
+++ b/html-tutorial/samples.html
@@ -22,9 +22,41 @@
 </head>
 
 <body>
-
     <h2>My Sample HTML page</h2>
+    
+    <!-- table tags -->
+    <table>
+        <thead>
+            <tr>
+                <td>Name</td>
+                <td>Color</td>
+                <td>Number</td>
+            </tr>
+        </thead>
+            <tr>
+            <td>Elena</td>
+            <td>Blue</td>
+            <td>12</td>
+        </tr>
+        <tr>
+            <td>Sarah</td>
+            <td>Silver</td>
+            <td>9</td>
+        </tr>
+        <tr>
+            <td>Marc</td>
+            <td>Azure</td>
+            <td>18</td>
+        </tr>
+    </table>
 
+    <!-- Hx tags -->
+    <h1>H1 tag</h1>
+    <h2>H2 tag</h2>
+    <h3>H3 tag</h3>
+    <h4>H4 tag</h4>
+    <h5>H5 tag</h5>
+    <h6>H6 tag</h6>
 
     <!-- select/option tag -->
     <span>Pick a state: </span>
