--- a/mycv/mycv.html
+++ b/mycv/mycv.html
@@ -3,24 +3,46 @@
 
 <head>
     <title>My CV Page</title>
+    <style>
+        /* apply color to specific tag name */
+        body {
+            color:blue;
+            font-family: arial;
+        }
+        h3 {
+            color:red;
+        }
+        p{
+            color:green;
+        }
+    </style>
 </head>
 
 <body>
     <h3>Contact Info</h3>
-    <p>Ommaimah Hussein</p>
-    <p>1234 Dreamland Dr.</p>
-    <p>Sleepville, OR. 99999</p>
-    <p>(503)123-4567</p>
-    <p>Ommaimah@gmail.com</p>
+    <div>
+        <span>Marshmellow Holland</span> |
+        <span>1234 Dreamland Dr.</span> |
+        <span>Sleepville, OR. 99999</span> |
+        <span>(503)123-4567</span> |
+        <span>marshmellow@mymail.com</span>
+    </div>
     
     <h3>Technology List</h3>
-    <tr>
-        <td>Java</td>
-        <td>Git</td>
-        <td>GitHub</td>
-        <td>SQL</td>
-        <td>HTML</td>
-    </tr>
+    <table>
+        <tr>
+            <td>Java</td>
+            <td>Git</td>
+            <td>GitHub</td>
+            <td>SQL</td>
+        </tr>
+        <tr>
+            <td>HTML</td>
+            <td>C#</td>
+            <td>SpringBoot</td>
+            <td></td>
+        </tr>
+    </table>
 
     <h3>Career Goals</h3>
     <p>I want to be an important part of my team.</p>
@@ -29,8 +51,8 @@
 
     <h3>Work Experience</h3>
     <div>
-        <span>Director</span>
-        <span>Peter Pan Labs</span>
+        <span>Training Coordinator</span> |
+        <span>Peter Pan Labs</span> |
         <span>March 2020 - June 2020</span>
         <p>Trained all lost boys in survival skills</p>
         <p>Faciliated meetings with pirates</p>
